change button size

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 </div>
             </div>
             <div class="d-grid">
-                <button class="shadow btn btn-light border border-black fw-bold" data-bs-toggle="modal" data-bs-target="#resultModal">CALCULATE YOUR
+                <button class="shadow btn btn-light btn-lg border border-black fw-bold" data-bs-toggle="modal" data-bs-target="#resultModal">CALCULATE YOUR
                     BMI</button>
             </div>
         </div>
